--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 /*
 CSS for Bubble Under site
 */
-body {font-family:Verdana, Helvetica, Arial, sans-serif;background-color:black;line-height:125%;padding:0;margin:0;}
+body {font-family:Verdana, Helvetica, Arial, sans-serif;background-color:black;line-height:125%;padding-left: 2rem:padding-right:3rem;margin:0;}
 /* Structure - positioning of key parts of page */
 nav, #body_text, header {position:absolute;}
 nav, #body_text {top:107px;}
